<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:src="@drawable/imagen_35"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#1a86ae"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/veci"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="9sp"
        android:text="@string/angie_beltran"
        android:textColor="#262628"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/text_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/ni_era"
        android:textAlignment="center"
        android:textColor="#c2c4ca"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <LinearLayout
        android:id="@+id/linearOfCenterButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profession">

        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#1A86AE"
            app:cardCornerRadius="17dp">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person_add_black_24dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#729dff"
            app:cardCornerRadius="17dp">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_message_black_24dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#8e75ff"
            app:cardCornerRadius="17dp">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_phone_black_24dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/linearOfRatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearOfCenterButtons">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3.5sp"
                    android:text="@string/vecis"
                    android:textColor="#c2c4ca"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4.5sp"
                    android:text="@string/_2318"
                    android:textColor="#262628"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="#B1ACB8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3.5sp"
                    android:text="@string/calificaci_n"
                    android:textColor="#c2c4ca"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="7.2dp"
                        android:layout_height="6.9dp"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="7.2dp"
                        android:layout_height="6.9dp"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="7.2dp"
                        android:layout_height="6.9dp"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="7.2dp"
                        android:layout_height="6.9dp"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="7.2dp"
                        android:layout_height="6.9dp"
                        android:src="@drawable/star" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="#B1ACB8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3.5sp"
                    android:text="@string/seguidores"
                    android:textColor="#c2c4ca"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4.5sp"
                    android:text="@string/_2318"
                    android:textColor="#262628"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/descrptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearOfRatting">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.8dp"
            android:layout_marginTop="8.8dp"
            android:layout_marginEnd="20.8dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/descrption"
            android:textColor="#6d6d6d"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrptionText">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="77dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="9.7dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="40sp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="21.7dp"
                    android:layout_height="19.8dp"
                    android:src="@drawable/up_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="@string/qu_necesitas"
                android:textColor="#ffffff"
                android:textSize="13.5sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="@string/chat_inteligente_de_solicitudes"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>